--- a/smart_health_society.html
+++ b/smart_health_society.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kerangka Strategis SHS-APIC</title>
+    <title>Kerangka Kerja SHS-APIC</title>
     <style>
         * {
             margin: 0;
@@ -470,7 +470,7 @@
                         <span class="dimension-badge">Evaluasi Berbasis Bukti (Kebijakan)</span>
                     </div>
                     <div class="stakeholder-integration" style="background: rgba(255, 107, 107, 0.1);">
-                        <strong>Integrasi Kerangka Operasional:</strong>
+                        <strong>Kerangak Kerja Operasional:</strong>
                         <span style="color: #d63031;">🏛️ Pemerintah & Regulator:</span> Kebijakan, regulasi, standar digitalisasi (SATUSEHAT, e-Kohort, SPGDT)
                     </div>
                     <div class="group-description">
@@ -489,7 +489,7 @@
                         <span class="dimension-badge">Kesiapan Organisasi (Level Layanan)</span>
                     </div>
                     <div class="stakeholder-integration" style="background: rgba(78, 205, 196, 0.1);">
-                        <strong>Integrasi Kerangka Operasional:</strong>
+                        <strong>Kerangak Kerja Operasional:</strong>
                         <span style="color: #00b894;">🏥 Fasilitas Kesehatan:</span> RS, Puskesmas, Klinik Digital (SIMRS, e-medical record, telemedicine)<br>
                         <span style="color: #00b894;">👨‍⚕️ Tenaga Kesehatan:</span> Dokter, perawat, apoteker dalam ekosistem digital<br>
                         <span style="color: #00b894;">👥 Pasien & Masyarakat:</span> Pengguna aplikasi kesehatan, wearable devices, telekonsultasi
@@ -510,7 +510,7 @@
                         <span class="dimension-badge">Evaluasi Berbasis Bukti (Keamanan)</span>
                     </div>
                     <div class="stakeholder-integration" style="background: rgba(69, 183, 209, 0.1);">
-                        <strong>Integrasi Kerangka Operasional:</strong>
+                        <strong>Kerangak Kerja Operasional:</strong>
                         <span style="color: #0984e3;">☁️ Data Center & Cloud:</span> Penyimpanan aman, keamanan data<br>
                         <span style="color: #0984e3;">🔐 Infrastruktur Digital:</span> Internet, 5G, protokol keamanan data
                     </div>
@@ -530,7 +530,7 @@
                         <span class="dimension-badge">Evaluasi Berbasis Bukti (Teknologi)</span>
                     </div>
                     <div class="stakeholder-integration" style="background: rgba(249, 202, 36, 0.1);">
-                        <strong>Integrasi Kerangka Operasional:</strong>
+                        <strong>Kerangak Kerja Operasional:</strong>
                         <span style="color: #fdcb6e;">🔧 Penyedia Teknologi:</span> Aplikasi kesehatan, AI, IoT, sistem interoperabilitas<br>
                         <span style="color: #fdcb6e;">🌐 Infrastruktur Digital:</span> Platform terintegrasi, standar FHIR HL7, SATUSEHAT
                     </div>
@@ -550,7 +550,7 @@
                         <span class="dimension-badge">Evaluasi Berbasis Bukti (Inovasi)</span>
                     </div>
                     <div class="stakeholder-integration" style="background: rgba(253, 121, 168, 0.1);">
-                        <strong>Integrasi Kerangka Operasional:</strong>
+                        <strong>Kerangak Kerja Operasional:</strong>
                         <span style="color: #e84393;">🤝 Kolaborasi Stakeholder:</span> Kemitraan publik-swasta, startup kesehatan digital<br>
                         <span style="color: #e84393;">💳 Pembayar/Asuransi:</span> BPJS, asuransi swasta, integrasi pembayaran digital<br>
                         <span style="color: #e84393;">🔬 Penyedia Teknologi (R&D):</span> Inovasi AI, blockchain, platform open-source
